--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "export": "next export"
+    "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "firebase": "^10.7.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -20,16 +21,5 @@
   "devDependencies": {
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4"
-  },
-  "keywords": [
-    "finance",
-    "calculator",
-    "stocks",
-    "investment",
-    "valuation",
-    "hebrew"
-  ],
-  "engines": {
-    "node": ">=18.0.0"
   }
 }
